# pragmara

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  ruff.toml  run_migrations.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: __init__.py  analytics.py  api_keys.py  auth.py  demo.py  dependencies.py  documents.py  health.py  knowledge_bases.py  query.py
backend/app/core/: config.py  database.py  embedding_cache.py  qdrant.py  rate_limiter.py  redis.py  security.py  utils.py
backend/app/models/: __init__.py  api_key.py  base.py  document.py  ingestion_job.py  knowledge_base.py  query.py  user.py
backend/app/schemas/: analytics.py  api_key.py  auth.py  document.py  knowledge_base.py
backend/app/services/: email.py  usage.py
backend/app/services/evaluation/: scorer.py
backend/app/services/ingestion/: chunker.py  cleaner.py  embedder.py  indexer.py  parser.py  pipeline.py
backend/app/services/retrieval/: hybrid_search.py  llm_streamer.py  prompt_builder.py  reranker.py
backend/scripts/: seed_demo_kb.py
backend/scripts/sample_docs/: fastapi-getting-started.md  python-asyncio-overview.md
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
frontend/hooks/: use-analytics.ts  use-api-keys.ts  use-documents.ts  use-knowledge-bases.ts
frontend/lib/: api.ts  (+4 more)
(+38 files in other folders)
